# TUX500_ble

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
ArduinoJson/: ArduinoJson-v5.13.0.h  CMakeLists.txt
ArduinoJson/ArduinoJson/: CMakeLists.txt
binc/: CMakeLists.txt  adapter.h  advertisement.h  agent.c  logger.c  logger.h
ble_reader/: CMakeLists.txt  ble_reader.c  ble_reader.cpp
ble_reader/m3src/: CMakeLists.txt
ble_reader/peripheral/: peripheral.c
common/: CMakeLists.txt  M3Crc32.cpp  M3Crc32.h  base64.cpp  base64.hpp  json.cpp  json.h  tools.cpp  tools.h
common/.deps/: base64.Po  json.Po  tools.Po
examples/peripheral/: peripheral.c
test_app/: CMakeLists.txt  bluez_teste  msgQ_test.cpp  teste
